--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
-    "pptxgenjs": "https://esm.sh/pptxgenjs@3.12.0"
+    "pptxgenjs": "https://esm.sh/pptxgenjs@3.12.0",
+    "recharts": "https://esm.sh/recharts@2.12.0"
   }
 }
 </script>
